# lamedetection

./: .gitignore  README.md  lanedetection.elf
SignDetection/: stream.cpp.save
SmartVideoCar/: CMakeLists.txt
SmartVideoCar/SignDetection/: stream  stream.cpp
SmartVideoCar/SignDetection/Cascade/: cap  cap.cpp  stop  stop.cpp
SmartVideoCar/SignDetection/Cascade/data/: cascade.xml  cascade1.xml
SmartVideoCar/cascade_data/: stopSignDetector_yellow.xml
SmartVideoCar/src/: CMakeLists.txt  birdseyeview.h  lanecalculation.cpp  lanecalculation.h  lanedetection.cpp  lanedetection.h  main.cpp  signdetection.cpp  signdetection.cpp.save  signdetection.cpp.save.1  signdetection.h  svc_runnable
SmartVideoCar/src/SerialConnection/: arduino_test  arduino_test.c
SmartVideoCar/svc_all_in_one/: smart_video_car_ai1.cpp
SmartVideoCar/svc_all_in_one/src/: CMakeLists.txt  birdseyeview.cpp  lanecalculation.cpp  lanedetection.cpp  lanedetection.h  main.cpp  signdetection.cpp  signdetection.h
SmartVideoCar/svc_all_in_one/src/SerialConnection/: SerialConnectionIntTest.c
SmartVideoCar/svc_all_in_one/src/SerialConnection/SerialConnectionArduino/: SerialConnection.ino
SmartVideoCar_Final_withSignDetection/: readme.txt  smartvideocar_multithreaded.cpp  smartvideocar_noVideo_multiThreaded
lanedetection_cpp/: build  buildLanes  lanedetect  lanedetect.backup.cpp  lanedetect.cpp  main.cpp  svc_timetest  svc_timetestcameras  timetest.cpp
lanedetection_ert_rtw/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.c  lanedetection.c  lanedetection.h  rtmodel.h  (+15 more)
(+810 files in other folders)
