cmake_minimum_required(VERSION 3.5.1)
project(lanedetection)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
add_subdirectory(src)
set(CMAKE_INSTALL_PREFIX ..)

#Files installation path
install(DIRECTORY build/bin/
	DESTINATION SmartVideoCar/
	FILES_MATCHING PATTERN lanedetection
	PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
                    GROUP_EXECUTE GROUP_READ)
